WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173783
webrtc::WebRtcSession is not handling correctly its state when setLocalDescription fails and is called again
https://bugs.webkit.org/show_bug.cgi?id=173783
Summary
webrtc::WebRtcSession is not handling correctly its state when setLocalDescri...
youenn fablet
Reported
2017-06-23 13:08:46 PDT
webrtc::WebRtcSession is not handling correctly its state when setLocalDescription fails and is called again
Attachments
Patch
(4.93 KB, patch)
2017-06-23 13:13 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.93 KB, patch)
2017-06-23 15:53 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-06-23 13:09:01 PDT
rdar://problem/32922986
youenn fablet
Comment 2
2017-06-23 13:12:30 PDT
See
https://bugs.chromium.org/p/chromium/issues/detail?id=677029
for the libwebrtc side
youenn fablet
Comment 3
2017-06-23 13:13:56 PDT
Created
attachment 313737
[details]
Patch
Alex Christensen
Comment 4
2017-06-23 15:04:21 PDT
Comment on
attachment 313737
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=313737&action=review
> LayoutTests/webrtc/libwebrtc/setLocalDescriptionCrash.html:35 > + });
indentation is strange here.
youenn fablet
Comment 5
2017-06-23 15:53:35 PDT
Created
attachment 313755
[details]
Patch for landing
WebKit Commit Bot
Comment 6
2017-06-23 16:06:51 PDT
Comment on
attachment 313755
[details]
Patch for landing Clearing flags on attachment: 313755 Committed
r218771
: <
http://trac.webkit.org/changeset/218771
>
WebKit Commit Bot
Comment 7
2017-06-23 16:06:53 PDT
All reviewed patches have been landed. Closing bug.
youenn fablet
Comment 8
2017-06-24 23:13:05 PDT
setLocalDescriptionCrash.html is timing out in bots.
bug 173817
should handle this issue.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug