webrtc::WebRtcSession is not handling correctly its state when setLocalDescription fails and is called again https://bugs.webkit.org/show_bug.cgi?id=173783

Patch by Youenn Fablet <youenn@apple.com> on 2017-06-23
Reviewed by Alex Christensen.

Source/WebCore:

Test: webrtc/libwebrtc/setLocalDescriptionCrash.html

* Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:
(WebCore::LibWebRTCMediaEndpoint::doSetLocalDescription): Fail early if there is no pending remote description and description is for an answer.

LayoutTests:

* webrtc/libwebrtc/setLocalDescriptionCrash-expected.txt: Added.
* webrtc/libwebrtc/setLocalDescriptionCrash.html: Added.

Canonical link: https://commits.webkit.org/190652@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218771 268f45cc-cd09-0410-ab3c-d52691b4dbfc